--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "localizationjs",
-  "version": "0.2.0",
+  "version": "2.0.0",
   "description": "Localization module",
-  "main": "./index.js",
+  "main": "./dist/localization.js",
   "author": {
     "name": "Balasyan Alexandr",
     "email": "mywebstreet@gmail.com"
@@ -17,19 +17,32 @@
     "internationalization",
     "intl",
     "localize",
-    "globalize"
+    "globalize",
+    "i18n",
+    "l10n"
   ],
   "license": "MIT",
   "scripts": {
-    "test": "mocha"
+    "start": "webpack",
+    "build": "BUILD=true MINIMIZE=true webpack",
+    "test": "BUILD=true webpack && mocha",
+    "eslint": "eslint src test"
   },
   "dependencies": {
-    "intl": "*"
+    "intl": "1.2.5",
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "lodash": "^4.17.4",
-    "mocha": "^3.2.0"
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "mocha": "^3.5.3",
+    "mocha-webpack": "^1.1.0",
+    "webpack": "^3.11.0"
   },
   "repository": {
     "type": "git",
