--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "localizationjs",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Localization module",
-  "main": "./dist/localization.js",
+  "main": "./src/localization.node.js",
   "author": {
     "name": "Balasyan Alexandr",
     "email": "mywebstreet@gmail.com"
