--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "localizationjs",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Localization module",
   "main": "./src/localization.node.js",
   "author": {
@@ -28,21 +28,29 @@
     "test": "BUILD=true webpack && mocha",
     "eslint": "eslint src test"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run eslint && npm run test && npm run build"
+    }
+  },
   "dependencies": {
     "intl": "1.2.5",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
-    "eslint": "^4.19.1",
+    "eslint": "^5.15.1",
     "eslint-loader": "^2.0.0",
-    "mocha": "^3.5.3",
+    "husky": "^1.3.1",
+    "mocha": "^6.0.2",
     "mocha-webpack": "^1.1.0",
-    "webpack": "^3.11.0"
+    "terser-webpack-plugin": "^1.2.3",
+    "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2"
   },
   "repository": {
     "type": "git",
