--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "localizationjs",
-  "version": "2.0.9",
+  "version": "2.0.10",
   "description": "Localization module",
   "main": "./src/localization.node.js",
   "author": {
-    "name": "Balasyan Alexandr",
+    "name": "Alexander Balasyan",
     "email": "mywebstreet@gmail.com"
   },
   "keywords": [
@@ -30,7 +30,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run eslint && npm run test && npm run build"
+      "pre-commit": "npm run eslint && npm run test && npm run build && git add ./dist/*"
     }
   },
   "dependencies": {
@@ -45,7 +45,7 @@
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.2.1",
-    "husky": "^1.3.1",
+    "husky": "^4.2.5",
     "mocha": "^7.1.1",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.0",
